--- a/views/index.html
+++ b/views/index.html
@@ -6,27 +6,50 @@
       <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
       <link href="style.css" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
    </head>
 
    <body>
-    <h1>Timestamp Microservice</h1>
-    <hr />
-    <div class="container">
-      <h3>Example Usage:</h3>
-      <ul>
-        <li><a href="api/2015-12-25">[project url]/api/2015-12-25</a></li>
-        <li><a href="api/1451001600000">[project url]/api/1451001600000</a></li>
-      </ul>
+    
+    
+      
+ 
+<h1>Timestamp Microservice <span class="material-symbols-outlined">
+  event_note
+  </span></h1>
+<hr />
+<div class="container">
+  <h3>User Story</h3>
+  <p> 1. I can pass a string as a parameter, and it will check to see whether that string
+    contains either a Unix timestamp or a natural language date (e.g., January 1, 2016) <br />
+    2. If it does, it returns both the Unix timestamp and the natural language form of that date. <br />
+    3. If it does not contain a date or Unix timestamp, it returns null for those properties.</p>
+  <h3>Example Usage</h3>
+  <p> Enter the date in the url bar in the UTC (yyyy-mm-dd) or UNIX format <br /></p>
+  <ul>
+    <li><a href="api/2022-12-25">/api/2022-12-25</a></li>
+    <li><a href="api/1671926400000">/api/1671926400000</a></li>
+  </ul>
 
-      <h3>Example Output:</h3>
-      <p>
-        <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
-      </p>
-    </div>
-    <div class="footer">
-      <p>
-        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
-      </p>
-    </div>
+  <h3>Example Output</h3>
+  <p> It will give an output like: <br />
+    <code>{
+      "unix":1451001600000,           
+      "utc":"Fri, 25 Dec 2015 00:00:00 GMT"
+    }</code>
+  </p>
+</div>
+<div class="footer">
+  <p>
+    By <a href="https://github.com/abroroo">abroro</a>
+  </p>
+</div> 
+
+
   </body>
 </html>
+
+
+
+
+
