--- a/public/style.css
+++ b/public/style.css
@@ -3,10 +3,70 @@
 
 body {
 	font-family: 'Jost', sans-serif;
-	/*font-family: 'Nanum Gothic', sans-serif;
+	font-size: 16px;
+	color: #222;
+	background-color: #fafafa;
+	text-align: center;
+	line-height: 1.4em;
+  }
+  
+  .container {
+	padding: 0;
+	margin-top: 40px;
+  }
+  
+  h3 {
+	margin-top: 30px;
+  }
+  
+  .footer {
+	margin-top: 40px;
+  }
+  
+  .user-stories {
+	position: relative;
+	text-align: justify;
+	max-width: 700px;
+	margin: 15px auto;
+  }
+  code {
+	font-family: monospace;
+	padding: 2px;
+	color: black;
+	background-color: #fff;
+  }
+  ol {
+	list-style-position: outside;
+  }
+  ul {
+	list-style-type: none;
+  }
+  
+  li {
+	margin-bottom: 0.5em;
+  }
+  .user-stories li {
+	margin-bottom: 1em;
+  }
+  
+  a {
+	color: #2574a9;
+  }
+
+
+
+
+
+
+
+
+/*
+body {
+	font-family: 'Jost', sans-serif;
+	font-family: 'Nanum Gothic', sans-serif;
 	font-family: 'Nanum Myeongjo', serif;
 	font-family: 'Oranienbaum', serif;
-	font-family: 'Vidaloka', serif;*/
+	font-family: 'Vidaloka', serif;
 	font-size: 16px;
 	color: #222;
 	background-color: #F9F2ED;
@@ -56,4 +116,4 @@ a {
 	'wght' 400,
 	'GRAD' 0,
 	'opsz' 48
-  }
+  }*/
