--- a/views/index.html
+++ b/views/index.html
@@ -6,10 +6,14 @@
   <title>Timestamp Microservice</title>
   <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico"
     type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+  <div class="navbar-nav m-5">
+    <a class="nav-link active" aria-current="page" href="/">Home</a>
+  </div>
   <div class="container">
     <h2>API Project: Timestamp Microservice</h2>
     <h3>User Stories :</h3>
@@ -45,10 +49,10 @@
     <h3>Example Usage:</h3>
     <ul>
       <li>
-        <code>GET <a href="/api/2015-12-25" target="_new">timestamp-miservice.herokuapp.com/api/2015-12-25</a></code>
+        <code>GET <a href="/time-stamp/api/2015-12-25" target="_new">timestamp-miservice.herokuapp.com/api/2015-12-25</a></code>
       </li>
       <li>
-        <code>GET <a href="/api/1451001600000" target="_new">timestamp-miservice.herokuapp.com/api/1451001600000</a></code>
+        <code>GET <a href="/time-stamp/api/1451001600000" target="_new">timestamp-miservice.herokuapp.com/api/1451001600000</a></code>
       </li>
     </ul>
 
